<resources>
    <string name="app_name">MLA App</string>

    <string name="greet">Welcome</string>
    <string name="action_settings">Settings</string>
    <string name="article">News</string>
    <string name="main_page">Home</string>
    <string name="image">Image</string>
    <string name="video">Videos</string>
    <string name="navigation_icon_desc">open close navigation</string>


    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="logging">Logging</string>
    <string name="retry">Retry</string>


    <string name="logging_verbose">Verbose</string>
    <string name="logging_normal">Normal</string>


    <string name="drm_error_not_supported">Protected content not supported on API levels below 18</string>

    <string name="drm_error_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="drm_error_unknown">An unknown DRM error occurred</string>
    <string name="off">[off]</string>

    <string name="on">[on]</string>
    <string name="enable_background_audio">Play in background</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
