<?xml version="1.0" encoding="UTF-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:focusable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        />

  <com.google.android.exoplayer.VideoSurfaceView android:id="@+id/surface_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"/>


    <com.google.android.exoplayer.text.SubtitleView android:id="@+id/subtitles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:visibility="invisible"/>

    <View android:id="@+id/shutter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#88000000"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <TextView android:id="@+id/player_state_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>
        <TextView android:id="@+id/debug_sample_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>

        <TextView android:id="@+id/debug_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:textSize="10sp"
            tools:ignore="SmallSp"/>

        <LinearLayout android:id="@+id/controls_root"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:padding="10dp">

            <Button android:id="@+id/video_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video"
                style="@style/DemoButton"

                android:onClick="showVideoPopup"/>

            <Button android:id="@+id/audio_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audio"
                style="@style/DemoButton"

                android:onClick="showAudioPopup"/>

            <Button android:id="@+id/text_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text"
                style="@style/DemoButton"
                android:visibility="gone"
                android:onClick="showTextPopup"/>

            <Button android:id="@+id/verbose_log_controls"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logging"
                style="@style/DemoButton"
                android:onClick="showVerboseLogPopup"/>

            <Button android:id="@+id/retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/retry"

                style="@style/DemoButton"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
